# immorterm

./: .dockerignore  .gitignore  .oxlintrc-terminal.json  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  WORKFLOW-NOTES.md  biome.json  package.json  tsconfig.base.json
.claude/docs/: ai-canvas.md  scrollback-architecture.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/deploy-daemon/: SKILL.md
.claude/skills/deploy-extension/: SKILL.md
.claude/skills/deploy-immorterm-ai/: SKILL.md
.claude/skills/immorterm-workshop-cross-session/: SKILL.md
.claude/skills/immorterm-workshop-diagrams/: SKILL.md
.claude/skills/immorterm-workshop-wake-on-click/: SKILL.md
.claude/skills/immorterm-workshops/: SKILL.md
.claude/skills/stranger-rehearsal/: SKILL.md
.claude/skills/verify-immorterm-ai/: SKILL.md
.devops/docker/: Dockerfile.immorterm-ai-headless  immorterm-ai-headless-entrypoint.sh
.github/workflows/: ci.yml  promote.yml  publish-libs.yml  publish-memory.yml  release-tauri.yml
.husky/: pre-push
.immorterm/: project.json
apps/docs/: moon.yml  next.config.mjs  package.json  postcss.config.mjs  source.config.ts  tailwind.config.ts  tsconfig.json
apps/docs/app/: global.css  layout.tsx  page.tsx
apps/docs/lib/: source.ts
apps/extension/: .vscodeignore  README.md  RESOURCES.md  package.json  tsconfig.json
apps/extension/resources/: .zshrc  claude-session-capture  claude-session-map  claude-session-sync  claude-session-tracker  claude-stats  gpu-terminal-browser.js  gpu-terminal-file-icons.js  gpu-terminal-files.js  gpu-terminal-input.js  gpu-terminal-modals.js  gpu-terminal-plans.js  gpu-terminal-pomodoro.js  gpu-terminal-scratch.js  gpu-terminal-tasks.js  gpu-terminal-tile.js  gpu-terminal-utils.js  gpu-terminal.css  gpu-terminal.html  immorterm-shortcuts.js  kill-screens  log-cleanup  menu-data.json  screen-auto  screen-cleanup  screen-forget  screen-forget-all  screen-reconcile  screenrc.template  shell-init.zsh  shortcuts.html  tab-shell.html  team-terminal.html  wizard.html
apps/extension/scripts/: dump-menu-data.ts
apps/extension/src/: activation.ts  claude-sync.ts  extension.ts  gpu-terminal.ts  hibernation-message.ts  hub-sidecar.ts  (+7 more)
apps/immorterm/: moon.yml  package.json  postinstall.mjs  tsconfig.json
apps/immorterm-ai/immorterm-core/: Cargo.toml
apps/immorterm-ai/immorterm-core/examples/: replay_cast.rs
apps/immorterm-ai/immorterm-core/src/: ai_layer.rs  cell.rs  cursor.rs  cursor_nav.rs  diagram.rs  expression.rs  graphics.rs  grid.rs  lib.rs  links.rs  log.rs  marker.rs  overlays.rs  scrollback.rs  session.rs  subagent.rs  team.rs  terminal.rs
apps/immorterm-ai/immorterm-daemon/: Cargo.toml
apps/immorterm-ai/immorterm-daemon/src/: attach.rs  audio.rs  browser.rs  browser_lock.rs  browser_mirror.rs  channel_registry.rs  chat_overlay.rs  claude.rs  commands.rs  daemon.rs  ipc.rs  log_processor.rs  main.rs  mcp.rs  openmemory_push.rs  pty.rs  pty_history.rs  registry.rs  remote.rs  screenshot.rs  structured_log.rs  subagent_watcher.rs  team_watcher.rs  team_window.rs  websocket.rs  window.rs
apps/immorterm-ai/immorterm-digest/: Cargo.toml
apps/immorterm-ai/immorterm-digest/src/: checkpoint.rs  debouncer.rs  hub_client.rs  ipc.rs  key.rs  lifecycle.rs  main.rs  orchestrator.rs  pipeline.rs  registry.rs  registry_watch.rs  watcher.rs
apps/immorterm-ai/immorterm-render/: Cargo.toml
apps/immorterm-ai/immorterm-render/src/: atlas.rs  bidi.rs  images.rs  lib.rs  panes.rs  pipeline.rs  popup.rs  renderer.rs  shader_validation.rs  statusbar.rs  theme.rs
apps/immorterm-ai/immorterm-render/src/shaders/: bg.wgsl  decor.wgsl  glyph.wgsl  image.wgsl
apps/immorterm-ai/immorterm-wasm/: Cargo.toml
apps/immorterm-ai/immorterm-wasm/src/: comments.rs  lib.rs
apps/immorterm-ai/immorterm-wasm/web/: index.html
apps/immorterm-app/: dist
apps/immorterm-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/immorterm-app/src-tauri/capabilities/: default.json
apps/immorterm-app/src-tauri/icons/: icon.icns
apps/immorterm-app/src-tauri/src/: control_api.rs  hub_sidecar.rs  lib.rs  main.rs  preferences.rs  sidecar_installer.rs  sidecar_registry.rs  tabs.rs
docs/: UPDATING.md  browser-tools.md  browser.md  distribution-matrix.md  installation.md
docs/internal/: BROKER-DESIGN.md  memory-product-map.md
docs/launch/: browser-demo-script.md  launch-kit-v1.md
libs/analytics/: moon.yml  package.json
libs/config/: moon.yml  package.json
libs/conversation-adapters/: Cargo.toml
libs/conversation-adapters/src/: lib.rs  shared.rs  turn.rs
libs/conversation-adapters/src/formats/: aider.rs  claude_code.rs  cline.rs  codex.rs  cursor.rs  gemini.rs  opencode.rs  windsurf.rs
libs/conversation-adapters/tests/: fixture_parity.rs
libs/conversation-adapters/tests/fixtures/: fixture-aider.md  fixture-cline.jsonl  fixture-windsurf.jsonl
libs/conversation-schema/: Cargo.toml
libs/conversation-schema/src/: lib.rs
libs/design-tokens/: moon.yml  package.json
libs/license/: moon.yml  package.json
libs/menu-data/: package.json  tsconfig.json
libs/services/: moon.yml  package.json
libs/structured-logs/: Cargo.toml  cbindgen.toml  structured_logs.h
libs/structured-logs/src/: ai_extractor.rs  asciicast.rs  ffi.rs  handle.rs  lib.rs  logger.rs  restore.rs
libs/terminal-logs/: package.json
libs/tier-config/: config.json  package.json
libs/types/: moon.yml  package.json
libs/ui/: package.json  tsconfig.json  vite.config.ts
manifests/: sidecars.json
ops/rehearsal/: browser-e2e-scenario.js  browser-e2e.sh  stranger-e2e.sh
scripts/: build-hub-sidecar.mjs  build-immorterm-ai.sh  build-menu-data.mjs  remote-test-container.sh  test-immorterm-ai.sh
services/hub/: Cargo.toml
services/hub/src/: claude_tracker.rs  config.rs  events.rs  http.rs  main.rs  markdown.rs  session_manager.rs  task_watcher.rs
services/hub/src/routes/: claude_cache.rs  config_api.rs  digest_api.rs  files_api.rs  legacy.rs  mod.rs  modal_api.rs  plans.rs  registry.rs  remote_api.rs  spaces.rs  tasks.rs  vendors_api.rs
services/hub/tests/: webview_contracts.rs
(+230 files in other folders)
