[workspace]
resolver = "2"
members = [
    "apps/immorterm-ai/immorterm-core",
    "apps/immorterm-ai/immorterm-daemon",
    "apps/immorterm-ai/immorterm-digest",
    "apps/immorterm-ai/immorterm-render",
    "apps/immorterm-ai/immorterm-wasm",
    "libs/conversation-adapters",
    "libs/conversation-schema",
    "libs/structured-logs",
    "services/hub",
]
# Tauri app uses its own lockfile + resolver (Tauri plugins have version constraints
# that don't always play well with shared workspace deps). Kept as standalone crate.
exclude = [
    "apps/immorterm-app/src-tauri",
]
# WASM crate requires --target wasm32-unknown-unknown; exclude from default builds
default-members = [
    "apps/immorterm-ai/immorterm-core",
    "apps/immorterm-ai/immorterm-daemon",
    "apps/immorterm-ai/immorterm-digest",
    "apps/immorterm-ai/immorterm-render",
    "libs/conversation-adapters",
    "libs/conversation-schema",
    "libs/structured-logs",
    "services/hub",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "LicenseRef-FSL-1.1-ALv2"
authors = ["Shai Snir"]

[workspace.dependencies]
# Terminal emulation
vte = "0.13"
unicode-width = "0.2"
unicode-bidi = "0.3"
unicode-script = "0.5"
smallvec = { version = "1", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# PTY
portable-pty = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Clipboard
arboard = "3"

# GPU rendering
wgpu = "24"
naga = { version = "24", features = ["wgsl-in"] }
fontdb = "0.16"
cosmic-text = "0.12"
bytemuck = { version = "1", features = ["derive"] }
winit = "0.30"
pollster = "0.4"

# Image handling
image = "0.25"
base64 = "0.22"

# SVG/Diagram rendering
svgbob = "0.7"
resvg = "0.44"

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Nix for Unix APIs
nix = { version = "0.29", features = ["term", "signal", "process", "fs"] }

# Cross-platform process enumeration + per-process RSS/CPU (no `ps` forks)
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Audio playback
rodio = "0.20"

# File system notifications
notify = "7"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-time = "1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "EventTarget",
    "console",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "ImageData",
    "TextMetrics",
] }

# Testing
proptest = "1"

# Internal crates
immorterm-core = { path = "apps/immorterm-ai/immorterm-core" }
immorterm-render = { path = "apps/immorterm-ai/immorterm-render" }
structured-logs = { path = "libs/structured-logs" }
conversation-schema = { path = "libs/conversation-schema" }
conversation-adapters = { path = "libs/conversation-adapters" }
