[package]
name = "conversation-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vendor-agnostic normalized conversation schema (immorterm-conversation.v1)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
