[package]
name = "immorterm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native daemon binary — drop-in replacement for the C screen fork"

[[bin]]
name = "immorterm-ai"
path = "src/main.rs"

[features]
# Default: full GUI build (winit native window + screenshot rendering).
# Required on macOS where the daemon also serves as the standalone native app.
default = ["gui"]

# Native window mode — pulls in `winit` + the `window.rs` / `team_window.rs` modules
# (immorterm-ai as a standalone GUI app, e.g. `immorterm-ai gui my-session`).
# Disabled for `headless` server builds (Linux VPS) that only serve Tauri/VS Code
# webview clients. `wgpu` and `pollster` stay enabled either way — `screenshot.rs`
# uses them for off-screen rendering and gracefully fails at runtime if no GPU
# adapter is available (server with no Vulkan/llvmpipe).
gui = ["dep:winit"]

# Headless build — no native window, no off-screen GPU rendering, no macOS clipboard APIs.
# Intended for Linux server deployments. Build with:
#   cargo build --release --bin immorterm-ai --no-default-features --features headless
headless = []

[dependencies]
immorterm-core = { workspace = true }
immorterm-render = { workspace = true }
structured-logs = { workspace = true }
tokio = { workspace = true }
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
nix = { workspace = true }
sysinfo = { workspace = true }
winit = { workspace = true, optional = true }
pollster = { workspace = true }
wgpu = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true }
notify = { workspace = true }
reqwest = { workspace = true }
rodio = { workspace = true }
# The extracted browser driver (renamed rudder → envoyage). Git dep against the
# Envoyage-Browsing home. Fall back to a path dep (`envoyage = { path =
# "../../../../envoyage" }`) if git auth becomes a bottleneck for local builds.
envoyage = { git = "https://github.com/Envoyage-Browsing/envoyage" }

# macOS-only AppKit/Foundation bindings — used by `websocket.rs::read_clipboard_file_url`
# to read NSPasteboard `public.file-url` entries (Finder Cmd+C → POSIX path).
# The Rust code in websocket.rs is already cfg(target_os = "macos") gated.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSPasteboard"] }
objc2-foundation = { version = "0.2", features = ["NSURL", "NSArray", "NSString"] }
