[package]
name = "immorterm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser target — WASM bridge for ImmorTerm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
immorterm-core = { workspace = true }
immorterm-render = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
web-time = { workspace = true }
wgpu = { workspace = true }
console_error_panic_hook = { workspace = true }
